[package]
name = "rusty-maid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
tokio = { version = "1.38.0", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["cookies", "json"], optional = true }
chrono = "0.4.38"
async-trait = "0.1.80"
rand = "0.8.5"
lazy_static = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
scraper = "0.19.0"
regex = "1.10.5"
paste = "1.0.15"
deepl = "0.6.3"
typed-builder = "0.18.2"
make-quote = "0.5.3"
tempfile = "3.10.1"
image = "0.25.1"
walkdir = "2.5.0"

# osu
rosu-v2 = "0.8.0"
rosu-pp = "1.0.0"

# Cache Management
r2d2 = "0.8.10"
redis = { version = "0.25.2", features = ["r2d2"] }

serde = { version = "1.0.138", features = ["derive"]}
serde_json = "1.0.82"
toml = "0.8.6"
quick-xml = { version = "0.35.0", features = [ "serialize" ] }

clearurl = { version = "0.7.1", features = [] }

[[bin]]
name = "tgbot"

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3

[features]
default = ["reqwest", "osu"]
osu = []
reqwest = ["dep:reqwest"]
