[package]
name = "rusty-maid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.89"
reqwest = { version = "0.12.7", features = ["cookies", "json"], optional = true }
chrono = "0.4.38"
async-trait = "0.1.83"
rand = "0.8.5"
lazy_static = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
scraper = "0.20.0"
regex = "1.10.6"
paste = "1.0.15"
deepl = "0.6.4"
typed-builder = "0.20.0"
make-quote = "0.5.3"
tempfile = "3.12.0"
image = "0.25.2"
walkdir = "2.5.0"

# Cache Management
r2d2 = "0.8.10"
redis = { version = "0.27.2", features = ["r2d2"] }

serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
toml = "0.8.19"
quick-xml = { version = "0.36.2", features = [ "serialize" ] }

clearurl = { version = "0.7.1", features = [] }

[[bin]]
name = "tgbot"

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
